data/derived/comb/progs/unify/prog2720.ml.out
Characters 129-152:
  List.fold_left f base l;;
  ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type string
